--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -5,3 +5,12 @@ body {
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
+.chat-room {
+  height: 70vh; //CHANGE THIS LATER
+  display: flex;
+  flex-direction: column;
+  &__messages {
+    flex-grow: 1;
+  }
+}
